Fix issue with chat notifications being cut off

--- a/src/plugins/chatview/styles/chatbox.scss
+++ b/src/plugins/chatview/styles/chatbox.scss
@@ -175,7 +175,7 @@
             }
 
             .chat-content__notifications {
-                height: 1.7em;
+                display: block;
                 white-space: pre;
                 background-color: var(--chat-content-background-color);
                 color: var(--subdued-color);
